--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,11 @@ spring:
       hibernate:
       # show_sql: true
         format_sql: true
+
+  data:
+    web:
+      pageable:
+        default-page-size: 10
 logging.level:
   org.hibernate.SQL: debug
   #org.hibernate.type: trace
